# aoc_2020

./: Cargo.toml
src/: lib.rs
src/day1/: main.rs
src/day10/: main.rs
src/day11/: main.rs
src/day12/: main.rs
src/day2/: main.rs
src/day3/: main.rs
src/day4/: main.rs
src/day5/: main.rs
src/day6/: main.rs
src/day7/: main.rs
src/day8/: main.rs
src/day9/: main.rs
